--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,13 @@
     <div class="post">
         <h2>{{ post.title }}</h2>
         <p><em>Written by {{ post.author }}</em></p>
+
+        <p>
+          <a href="{{ url_for('delete', post_id=post.id) }}" onclick="return confirm('Delete this post?');">
+            Delete
+          </a>
+        </p>
+
         <p>{{ post.content }}</p>
     </div>
     {% endfor %}
