Add update route and form

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
         <p><em>Written by {{ post.author }}</em></p>
 
         <p>
-          <a href="{{ url_for('delete', post_id=post.id) }}" onclick="return confirm('Delete this post?');">
-            Delete
-          </a>
+            <a href="{{ url_for('update', post_id=post.id) }}">Update</a>
+            |
+            <a href="{{ url_for('delete', post_id=post.id) }}" onclick="return confirm('Delete this post?');">Delete</a>
         </p>
 
         <p>{{ post.content }}</p>
